--- a/MyResume/Resume.htm
+++ b/MyResume/Resume.htm
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title></title>
+    <title>Vikas Rajan | CRM Consultant</title>
     <link href="media/css/style.min.css" rel="stylesheet" />
     <script src="d3.js"></script>
     <script src="http://maps.google.com/maps/api/js?key=AIzaSyBMYYj12F_c0x7KE2Udtwvf5MsTqPJouD4"></script>
