Enabled the Map section

--- a/MyResume/Resume.htm
+++ b/MyResume/Resume.htm
@@ -19,7 +19,7 @@
             <td style="width:80%;background-color:rgb(120,73,21)" id="tdContent"></td>
         </tr>
     </table>
-    <!--<div id="mapDiv"></div>-->
+    <div id="mapDiv"></div>
     <script src="media/script/resume_body.min.js"></script>
     <script src="media/script/resume_tracking.min.js"></script>
 </body>
